apps/flask-server/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  flask-server
  labels:
    app:  flask-server
spec:
  selector:
    matchLabels:
      app: flask-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  flask-server
    spec:
      containers:
      - name:  flask-server
        image:  flask-server:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  5000
          name:  flask-server
      restartPolicy: Always
      imagePullPolicy: 
---
apiVersion: v1
kind: Service
metadata:
  name: flask-server
  namespace: default
spec:
  selector:
    app: flask-server
  ports:
  - name: flask-server
    protocol: TCP
    port: 5000
    targetPort: 5000
