apps/flask-server/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-server-ingress
spec:
  rules:
  - host: "uat.helloworld.whatnot.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: flask-server
            port:
              number: 5000
